feat: add localization support and update LeaveEmailService default methods to include leaveId support.