@@ -9,29 +9,39 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
+
 import java.time.Instant;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    private final MessageSource messageSource;
+
+    public GlobalExceptionHandler(MessageSource messageSource) {
+        this.messageSource = messageSource;
+    }
+
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity<ApiErrorResponse> handleResourceNotFound(ResourceNotFoundException exception) {
-        return buildResponse(HttpStatus.NOT_FOUND, List.of(exception.getMessage()));
+        return buildResponse(HttpStatus.NOT_FOUND, List.of(translate(exception.getMessage())));
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
     public ResponseEntity<ApiErrorResponse> handleIllegalArgument(IllegalArgumentException exception) {
-        return buildResponse(HttpStatus.BAD_REQUEST, List.of(exception.getMessage()));
+        return buildResponse(HttpStatus.BAD_REQUEST, List.of(translate(exception.getMessage())));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ApiErrorResponse> handleMethodArgumentNotValid(MethodArgumentNotValidException exception) {
         List<String> details = exception.getBindingResult().getAllErrors().stream()
                 .map(error -> error instanceof FieldError fieldError
-                        ? fieldError.getField() + ": " + fieldError.getDefaultMessage()
-                        : error.getDefaultMessage())
-                .toList();
+                        ? fieldError.getField() + ": " + translate(error.getDefaultMessage())
+                        : translate(error.getDefaultMessage()))
+                .collect(Collectors.toList());
 
         return buildResponse(HttpStatus.BAD_REQUEST, details);
     }
@@ -39,10 +49,19 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<ApiErrorResponse> handleConstraintViolation(ConstraintViolationException exception) {
         List<String> details = exception.getConstraintViolations().stream()
-                .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                .toList();
+                .map(violation -> violation.getPropertyPath() + ": " + translate(violation.getMessage()))
+                .collect(Collectors.toList());
 
         return buildResponse(HttpStatus.BAD_REQUEST, details);
+    }
+
+    private String translate(String message) {
+        if (message == null) return "Unknown error";
+        try {
+            return messageSource.getMessage(message, null, message, LocaleContextHolder.getLocale());
+        } catch (Exception e) {
+            return message;
+        }
     }
 
     private ResponseEntity<ApiErrorResponse> buildResponse(HttpStatus status, List<String> details) {
